# checkers

./: CMakeLists.txt  README.md  resources.qrc
gui/: EndGameDialog.qml  GameBoard.qml  Main.qml  Menu.qml  Options.qml  Piece.qml  PlayerTimer.qml  PlayerTimersRow.qml  frontEnd.js
gui/Singleton/: CheckersTheme.qml
src/: checkersmodel.cpp  checkersmodel.h  computerplayer.cpp  computerplayer.h  game.cpp  game.h  gamecontroller.cpp  gamecontroller.h  gamelogic.cpp  gamelogic.h  gamesettingsmanager.cpp  gamesettingsmanager.h  main.cpp
